# evanescence

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  changelog.md  index-332dc255aa2b4081.js  index-332dc255aa2b4081_bg.wasm  index-53ec3813efd9a665.js  index-53ec3813efd9a665_bg.wasm  index-97941e54ed967b2.js  index-97941e54ed967b2_bg.wasm  index-f21eddf3539ea5c3.js  index-f21eddf3539ea5c3_bg.wasm  index.html  justfile  readme.md  rustfmt.toml  styles-e051f01e01745126.css  styles.css  wasm.js  wasm_bg.wasm
.github/workflows/: benchmark_core.yml  benchmarks.yml  deploy.yml  test.yml
dev/bench/: data.js
evanescence_cli/: Cargo.toml
evanescence_cli/src/: main.rs  renderer.py  renderers.py
evanescence_compute_management/: Cargo.toml
evanescence_compute_management/src/: computation.rs  computation_host.rs  evaluator.rs  lib.rs
evanescence_compute_management/src/computation/: point_cloud.rs  radial.rs
evanescence_core/: .gitignore  Cargo.toml
evanescence_core/adapters/: render_raw.py
evanescence_core/benches/: benchmarks.rs
evanescence_core/mathematica/: complex_spherical_harmonics.json  laguerre.json  laguerre.nb  legendre.json  legendre.nb  radial.json  radial_wavefunction.nb  real_spherical_harmonics.json  spherical_harmonic.nb  spherical_harmonics.nb
evanescence_core/src/: geometry.rs  lib.rs  main.rs  monte_carlo.rs  numerics.rs  orbital.rs  utils.rs
evanescence_core/src/geometry/: mod.rs  point.rs  region.rs  storage.rs  vec3.rs
evanescence_core/src/geometry/storage/: component_form_3.rs  grid_values.rs  grid_values_3.rs  mod.rs  struct_of_arrays.rs
evanescence_core/src/numerics/: double_factorial.rs  evaluation.rs  factorial.rs  function.rs  integrators.rs  mod.rs  monte_carlo.rs  optimization.rs  orthogonal_polynomials.rs  polynomial.rs  polynomials.rs  random.rs  root_finding.rs  special.rs  spherical_harmonics.rs  statistics.rs
evanescence_core/src/numerics/monte_carlo/: accept_reject.rs  mod.rs
evanescence_core/src/numerics/optimization/: simple_x.rs
evanescence_core/src/numerics/special/: factorial.rs  mod.rs  orthogonal_polynomials.rs  spherical_harmonics.rs
evanescence_core/src/numerics/statistics/: kolmogorov_smirnov.rs  mod.rs
evanescence_core/src/orbital/: atomic.rs  gaussian_mo.rs  hybrid.rs  hybridized.rs  mod.rs  molecular.rs  monte_carlo.rs  quantum_numbers.rs  wavefunction.rs  wavefunctions.rs
evanescence_core/src/orbital/atomic/: complex.rs  mod.rs  real.rs
evanescence_core/src/orbital/hybrid/: kind.rs  library.rs  linear_combination.rs
evanescence_core/src/utils/: sup_sub_string.rs
evanescence_core/utils/: parse_real_monte_carlo_test.py
evanescence_web/: .gitignore  Cargo.toml  build.rs  changelog.md  favicon.xcf  index.html
evanescence_web/res/: help_window.md  styles.css
evanescence_web/src/: descriptions.rs  evanescence_bridge.rs  lib.rs  main.rs  plotly.rs  plotters.rs  presets.rs  state.rs  ui.rs  utils.rs
evanescence_web/src/components/: button.rs  check_box.rs  dropdown.rs  mod.rs  raw.rs  raw_span.rs  slider.rs  tab_bar.rs  tooltip.rs  window.rs
evanescence_web/src/plotly/: color.rs  config.rs  histogram.rs  isosurface.rs  layout.rs  mod.rs  scatter.rs  scatter_3d.rs  surface.rs
evanescence_web/src/plotters/: mod.rs  pointillist.rs  supplemental.rs
evanescence_web/src/presets/: hybrid_preset.rs  mo_preset.rs  mod.rs  qn_preset.rs
evanescence_web/src/state/: cache.rs  mod.rs  presets.rs
evanescence_web/src/ui/: controls.rs  descriptions.rs  help.md  info_panel.rs  mod.rs  mode_bar.rs  pointillist_visualization.rs  supplemental_visualization.rs
evanescence_web/static/: .gitignore  index.html  styles.css
experiments/: .gitignore  point_cloud.py
experiments/monte_carlo_accuracy/: 53n2_probdistr.txt  600_montecarlo.txt  600_montecarlo_old.txt  600_probdistr.txt  monte_carlo_accuracy.py
