[workspace]
members = ["evanescence_core", "evanescence_web", "evanescence_cli"]

[profile.test.package]
evanescence_core.opt-level = 3
evanescence_web.opt-level = 3

[profile.dev.package]
evanescence_core.opt-level = 3
evanescence_web.opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
