[workspace]
resolver = "2"
members = [
    "evanescence_core",
    "evanescence_compute_management",
    "evanescence_cli",
    "evanescence_web",
]

[workspace.dependencies]
approx = { version = "0.5", features = ["num-complex"] }
itertools = "0.10"
nalgebra = "0.32"
num = "0.4"
serde = { version = "1", features = ["derive"] }
strum = { version = "0.24", features = ["derive"] }

[profile.test.package]
evanescence_core.opt-level = 3
evanescence_web.opt-level = 3

[profile.dev.package]
evanescence_core.opt-level = 3
evanescence_web.opt-level = 3

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
