[package]
name = "evanescence_cli"
description = "Simple command-line interface for evanescence_core using Plotly.py for plotting."
version = "0.1.0"
authors = ["al2me6 <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
anyhow = "1"
argh = "0.1"
evanescence_core = { path = "../evanescence_core" }
once_cell = "1"
pyo3 = { version = "0.14", features = ["auto-initialize"] }
strum = { version = "0.22", features = ["derive"] }
