[package]
name = "evanescence_core"
description = "Library for computing and working with hydrogenic wavefunctions."
version = "0.8.0"
authors = ["al2me6 <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
approx = "0.5"
getset = "0.1"
itertools = "0.10"
log = "0.4"
maplit = "1"
nanorand = { version = "0.7", default-features = false, features = [
    "wyrand",
    "std",
    "getrandom",
] }
num = "0.4"
roots = "0.0"
serde = { version = "1", features = [
    "derive",
], optional = true, default-features = false }
smallvec = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"

[dev-dependencies]
chrono = "0.4"
criterion = "0.3"
once_cell = "1"
rayon = "1"
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
