[package]
name = "evanescence_core"
description = "Library for computing and working with hydrogenic wavefunctions."
version = "0.8.0"
authors = ["al2me6 <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
approx = "0.5"
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1"
itertools = "0.10"
log = "0.4"
maplit = "1"
nalgebra = "0.31"
num = "0.4"
serde = { version = "1", features = ["derive"], optional = true }
smallvec = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
typenum = "1"

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.3", features = ['real_blackbox', 'html_reports'] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
