[package]
name = "evanescence_core"
description = "Library for computing and working with hydrogenic wavefunctions."
version = "0.8.0"
authors = ["Alvin Q. Meng <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
approx.workspace = true
getrandom = { version = "0.2", features = ["js"] }
getset = "0.1"
itertools.workspace = true
log = "0.4"
maplit = "1"
nalgebra.workspace = true
num.workspace = true
phf = { version = "0.11", features = ["macros"] }
serde = { workspace = true, optional = true }
smallvec = "1"
strum = { version = "0.24", features = ["derive"] }
thiserror = "1"
typenum = "1"

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]

[dev-dependencies]
chrono = "0.4"
criterion = { version = "0.3", features = ["real_blackbox", "html_reports"] }
rayon = "1"
# Transitive dependency of criterion; apparently this feature is needed to recognize `\d`.
regex = { version = "1", features = ["unicode-perl"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
bench = false

[[bench]]
name = "benchmarks"
harness = false
