[package]
name = "evanescence_web"
description = "A web application for visualizing hydrogenic orbitals."
version = "0.4.16"
authors = ["al2me6 <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
evanescence_core = { path = "../evanescence_core", features = ["serde"] }
getrandom = { version = "*", features = ["js"] }
getset = "0.1"
gloo = { git = "https://github.com/rustwasm/gloo" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
itertools = "0.10"
log = "0.4"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.3"
strum = "0.22"
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "EventTarget",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "Node",
    "Storage",
    "Window",
] }
yew = "0.18"
yewdux = "0.6"
yewtil = "0.4"

[features]
default = ["persistent"]
persistent = []

[build-dependencies]
pulldown-cmark = "0.8"
