[package]
name = "evanescence_web"
description = "A web application for visualizing hydrogenic orbitals."
version = "0.4.17"
authors = ["Alvin Q. Meng <alvin.q.meng@gmail.com>"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/al2me6/evanescence"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1"
derivative = "2"
evanescence_core = { path = "../evanescence_core", features = ["serde"] }
gloo = "0.8"
instant = { version = "0.1", features = ["wasm-bindgen"] }
itertools.workspace = true
log = "0.4"
nalgebra.workspace = true
num.workspace = true
serde.workspace = true
serde-wasm-bindgen = "0.4"
strum.workspace = true
wasm-bindgen = "0.2"
wasm-logger = "0.2"
web-sys = { version = "0.3", features = [
    "CssStyleDeclaration",
    "Document",
    "DomRect",
    "DomTokenList",
    "Element",
    "EventTarget",
    "HtmlCollection",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "Node",
    "Storage",
    "Window",
] }
yew = "0.19"
yewdux = "0.7"

[features]
default = ["persistent"]
persistent = []

[build-dependencies]
pulldown-cmark = "0.9"
